2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.

2007-12-30  Gil Forcada  <gforcada@svn.gnome.org>

	* ca/ca.po: Fixed the last string.

2007-11-21  Yannig Marchegay <yannig@marchegay.org> 

	* oc.po: Updated Occitan translation

2007-11-16  Claude Paroz  <claude@2xlibre.net>

	* Makefile.am: Added fr to DOC_LINGUAS
	* fr/fr.po: Added French translation.
	* fr/figures/*.png: Added screenshots.

2007-10-07  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.

2007-09-15  Yannig Marchegay <yannig@marchegay.org>

        * oc/oc.po: Updated Occitan translation

2007-07-02  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation

2007-06-25  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation

2007-06-07  Jordi Mas <jmas@softcatala.org>

	* ca/ca.po: Added Catalan translation by Joan Duran
	* Makefile.am: Added ca to DOC_LINGUAS

2007-05-10  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation

2007-05-07  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Added Spanish translation.

2007-05-05  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es/es.po: Added Spanish translation.
	* Maefile.am: Added es to DOC_LINGUAS.
	* es/figures/*.png: Added screenshots.

2007-04-22  David Lodge <dave@cirt.net>

	* en_GB/en_GB.po: Added British English translation.
	* Makefile.am: Added en_GB to DOC_LINGUAS

2007-04-22  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* sv/figures/*png: Added screenshots.
	* Makefile.am: Added sv to DOC_LINGUAS