@@ -1,3 +1,7 @@
+2008-01-13  Peter Parente <parente@cs.unc.edu>
+
+	* help/C/accerciser.xml: Added doc about validator
+
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
